Try to fix broken centering on mobile

--- a/src/components/Game.css
+++ b/src/components/Game.css
@@ -5,7 +5,6 @@
 .center-content {
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
   align-items: center;
 }
 
